...
    const val LINKS_EXPAND_BUTTON = "main_links_expand_button"
    const val MANUAL_UPDATE_BUTTON = "main_manual_update_button"
    const val AUTO_UPDATE_BUTTON = "main_auto_update_button"
    const val SNACKBAR_HOST = "main_snackbar_host"
    const val OBSERVATION_HISTORY_LIST_ROOT = "observation_history_list_root"
    const val OBSERVATION_HISTORY_LIST_TABLE = "observation_history_list_table"
    const val HISTORICAL_MANAGE_ROOT = "historical_manage_root"
    const val HISTORICAL_MANAGE_TOP_MENU_BUTTON = "historical_manage_top_menu_button"
    const val HISTORICAL_MANAGE_DELETE_ALL_MENU_ITEM = "historical_manage_delete_all_menu_item"
    const val HISTORICAL_MANAGE_ITEM_PREFIX = "historical_manage_item_"
    const val HISTORICAL_MANAGE_ITEM_MENU_PREFIX = "historical_manage_item_menu_"
    const val HISTORICAL_MANAGE_SHOW_MENU_PREFIX = "historical_manage_show_menu_"
    const val HISTORICAL_MANAGE_DELETE_MENU_PREFIX = "historical_manage_delete_menu_"
    const val HISTORICAL_MANAGE_MOVE_TOP_MENU_PREFIX = "historical_manage_move_top_menu_"
    const val HISTORICAL_MANAGE_MOVE_UP_MENU_PREFIX = "historical_manage_move_up_menu_"
...
